--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="skill-row">
                 <img class="skill_img" src="images/algorithm.png" alt="algorithmIcon">
                 <h3>Data Structure and Algorithms</h3>
-                <p class="skill_text">I had complete knowledge of Data structures and algorithm. I had solved nearly 500+ programming
+                <p class="skill_text">I have complete knowledge of Data structures and algorithm. I have solved nearly 500+ programming
                     questions from various platforms like Leetcode, gfg, InterviewBit.
                 </p>
             </div>
